Replace min, max with maxlength

--- a/WebSudoku/Client/Shared/Cell.razor
+++ b/WebSudoku/Client/Shared/Cell.razor
@@ -1,4 +1,4 @@
-﻿<input class="text-center" type="text" min="1" max="9" style="position:relative; min-width:42px; width:100%; /*font-size:large; border: none;*/ aspect-ratio:1/1" @onchange="OnValueChanged"/>
+﻿<input class="text-center" type="text" maxlength="1" style="position:relative; min-width:42px; width:100%; font-size:large; border: none; aspect-ratio:1/1" @onchange="OnValueChanged"/>
 
 @code {
     [Parameter]
