--- a/WebSudoku/Client/Pages/Index.razor
+++ b/WebSudoku/Client/Pages/Index.razor
@@ -2,8 +2,6 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Web Sudoku</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<p>Use the navigation menu to start playing.</p>
