--- a/WebSudoku/Client/Shared/Cell.razor
+++ b/WebSudoku/Client/Shared/Cell.razor
@@ -1,6 +1,16 @@
-﻿<input class="text-center" type="text" maxlength="1" style="position:relative; min-width:42px; width:100%; font-size:large; border: none; aspect-ratio:1/1" @onchange="OnValueChanged"/>
+﻿<input class="text-center" type="text" maxlength="1" readonly="@ReadOnly" value="@Value" style="position:relative; min-width:42px; width:100%; font-size:x-large; font-weight:@FontWeight; color:@Color; border: none; aspect-ratio:1/1" @onchange="OnValueChanged"/>
 
 @code {
     [Parameter]
     public EventCallback<ChangeEventArgs> OnValueChanged { get; set; }
+
+    [Parameter]
+    public bool ReadOnly { get; set; }
+
+    [Parameter]
+    public string Value { get; set; } = string.Empty;
+
+    protected string FontWeight => ReadOnly ? "bold" : "normal";
+
+    protected string Color => ReadOnly ? "black" : "gray";
 }
