--- a/WebSudoku/Client/Pages/Index.razor
+++ b/WebSudoku/Client/Pages/Index.razor
@@ -5,3 +5,20 @@
 <h1>Web Sudoku</h1>
 
 <p>Use the navigation menu to start playing.</p>
+
+<h3>Sudoku rules</h3>
+
+<ul>
+    <li>
+        Sudoku board is divided into 9 squares with 3x3 grid of cells.
+    </li>
+    <li>
+        Each cell on the board should be filled with digits 1 through 9.
+    </li>
+    <li>
+        Inside of each 3x3 square, column and row, given digit can appear only once.
+    </li>
+    <li>
+        You start a game with a board where some of the cells have been assigned a digit that cannot be changed. Your should fill the board according to the rules.
+    </li>
+</ul>
