Update Play again button

--- a/WebSudoku/Client/Pages/Sudoku.razor
+++ b/WebSudoku/Client/Pages/Sudoku.razor
@@ -60,7 +60,7 @@ else
 {
     <h1>Success</h1>
     <p>You finished with time @timePassed.</p>
-    <button class="btn btn-primary" onclick="@(() => Navigation.NavigateTo("/sudoku", forceLoad: true))">Play again</button>
+    <button class="btn btn-primary" onclick="@(() => Navigation.NavigateTo("/WebSudoku/sudoku", forceLoad: true))">Play again</button>
 }
 
 @code {
