--- a/WebSudoku/Client/Pages/Sudoku.razor
+++ b/WebSudoku/Client/Pages/Sudoku.razor
@@ -14,10 +14,10 @@
 }
 else if (!success)
 {
-    <h4>Your time: </h4>
-    <TimerDisplay OnTimePassed="Timer_OnTimePassed"/>
-    <table style="border:thick solid black; background-color: black; width:33%">
-        <tbody>
+    <h4>Your time:
+        <TimerDisplay OnTimePassed="Timer_OnTimePassed"/>
+    </h4>
+    <table class="sudoku-table" style="border:thick solid black; background-color: black;">
             @for (int r = 0; r < 9; r++)
             {
                 <tr>
@@ -53,7 +53,6 @@ else if (!success)
                 }
                 </tr>
             }
-        </tbody>
     </table>
 }
 else
