--- a/WebSudoku/Client/Shared/Cell.razor
+++ b/WebSudoku/Client/Shared/Cell.razor
@@ -1,4 +1,4 @@
-﻿<input class="text-center" type="text" maxlength="1" readonly="@ReadOnly" value="@Value" style="position:relative; min-width:42px; width:100%; font-size:x-large; font-weight:@FontWeight; color:@Color; border: none; aspect-ratio:1/1" @onchange="OnValueChanged"/>
+﻿<input class="text-center sudoku-input" type="text" maxlength="1" readonly="@ReadOnly" value="@Value" style="position:relative; width:100%; font-weight:@FontWeight; color:@Color; border: none; aspect-ratio:1/1" @onchange="OnValueChanged"/>
 
 @code {
     [Parameter]
