--- a/css/app.css
+++ b/css/app.css
@@ -95,6 +95,18 @@ a, .btn-link {
     }
 }
 
+@media only screen and (orientation: portrait){
+    sudoku-table {
+        border: thin solid black;
+        background-color: black;
+        width: 100%;
+    }
+
+    .sudoku-input {
+        font-size: larger;
+    }
+}
+
 /* landscape orientation */
 @media only screen and (min-width : 375px) and (max-width : 667px) and (orientation : landscape) {
     .sudoku-table {
