--- a/css/app.css
+++ b/css/app.css
@@ -70,7 +70,7 @@ a, .btn-link {
     }
 }
 
-@media only screen and (orientation: landscape){
+@media (orientation: landscape){
     sudoku-table {
         border: thin solid black;
         background-color: black;
