--- a/WebSudoku/Client/wwwroot/css/app.css
+++ b/WebSudoku/Client/wwwroot/css/app.css
@@ -47,7 +47,7 @@ a, .btn-link {
     }
 }
 
-@media only screen and (min-width: 1024px) {
+@media (min-width: 1024px) {
     .sudoku-table {
         border: thick solid black;
         background-color: black;
@@ -59,101 +59,39 @@ a, .btn-link {
     }
 }
 
-@media only screen and (min-width: 1440px) {
+@media (min-width: 1440px) {
     .sudoku-table {
-        border: thick solid black;
+        border: thin solid black;
         background-color: black;
         width: 50%;
     }
 
     .sudoku-input {
-        font-size: x-large;
+        font-size: medium;
     }
 }
 
-/* typical phone screen resolution */
-@media only screen and (max-width : 667px) {
+@media only screen and (orientation: landscape) {
     .sudoku-table {
-        border: thick solid black;
-        background-color: black;
-        width: 100%;
-    }
-
-    .sudoku-input {
-        font-size: x-large;
-    }
-}
-@media only screen and (orientation: landscape){
-    sudoku-table {
-        border: thick solid black;
+        border: thin solid black;
         background-color: black;
         width: 50%;
     }
 
     .sudoku-input {
-        font-size: x-large;
+        font-size: medium;
     }
 }
 
-/* landscape orientation */
-@media only screen and (min-width : 375px) and (max-width : 667px) and (orientation : landscape) {
+@media only screen and (orientation: portrait) {
     .sudoku-table {
-        border: thick solid black;
-        background-color: black;
-        width: 50%;
-    }
-
-    .sudoku-input {
-        font-size: x-large;
-    }
-}
-/* portrait orientation */
-@media only screen and (min-width : 375px) and (max-width : 667px) and (orientation : portrait) {
-    .sudoku-table {
-        border: thick solid black;
+        border: thin solid black;
         background-color: black;
         width: 100%;
     }
 
     .sudoku-input {
-        font-size: x-large;
-    }
-}
-
-/* typical tablet screen resolution */
-@media only screen and (max-width : 1024px) {
-    sudoku-table {
-        border: thick solid black;
-        background-color: black;
-        width: 100%;
-    }
-
-    .sudoku-input {
-        font-size: smaller;
-    }
-}
-/* landscape orientation */
-@media only screen and (min-width : 768px) and (orientation : landscape) {
-    .sudoku-table {
-        border: thick solid black;
-        background-color: black;
-        width: 50%;
-    }
-
-    .sudoku-input {
-        font-size: x-large;
-    }
-}
-/* portrait orientation */
-@media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : portrait) {
-    .sudoku-table {
-        border: thick solid black;
-        background-color: black;
-        width: 100%;
-    }
-
-    .sudoku-input {
-        font-size: x-large;
+        font-size: larger;
     }
 }
 
