deploy: 00cce610e11c19006a0d55b17c4edbf568872751

--- a/css/app.css
+++ b/css/app.css
@@ -46,9 +46,58 @@ a, .btn-link {
         font-size: smaller;
     }
 }
-@media (min-width: 1024px) {
+
+@media only screen and (orientation: landscape) {
     .sudoku-table {
-        border: thick solid black;
+        border: thin solid black;
+        background-color: black;
+        width: 50%;
+    }
+
+    .sudoku-input {
+        font-size: medium;
+    }
+}
+
+@media only screen and (orientation: portrait) {
+    .sudoku-table {
+        border: thin solid black;
+        background-color: black;
+        width: 100%;
+    }
+
+    .sudoku-input {
+        font-size: larger;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .sudoku-table {
+        border: thin solid black;
+        background-color: black;
+        width: 90%;
+    }
+
+    .sudoku-input {
+        font-size: x-large;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1212px) {
+    .sudoku-table {
+        border: thin solid black;
+        background-color: black;
+        width: 90%;
+    }
+
+    .sudoku-input {
+        font-size: x-large;
+    }
+}
+
+@media (min-width: 1212px) {
+    .sudoku-table {
+        border: thin solid black;
         background-color: black;
         width: 70%;
     }
@@ -58,7 +107,7 @@ a, .btn-link {
     }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 1500px) {
     .sudoku-table {
         border: thin solid black;
         background-color: black;
@@ -66,31 +115,7 @@ a, .btn-link {
     }
 
     .sudoku-input {
-        font-size: medium;
-    }
-}
-
-@media only screen and (orientation: landscape){
-    .sudoku-table {
-        border: thin solid black;
-        background-color: black;
-        width: 50%;
-    }
-
-    .sudoku-input {
-        font-size: medium;
-    }
-}
-
-@media only screen and (orientation: portrait){
-    .sudoku-table {
-        border: thin solid black;
-        background-color: black;
-        width: 100%;
-    }
-
-    .sudoku-input {
-        font-size: larger;
+        font-size: x-large;
     }
 }
 
