Update timer locations.

--- a/WebSudoku/Client/Pages/Sudoku.razor
+++ b/WebSudoku/Client/Pages/Sudoku.razor
@@ -14,7 +14,7 @@
 }
 else if (!success)
 {
-    <h4>Your time:
+    <h4 class="display-var">Your time:
         <TimerDisplay OnTimePassed="Timer_OnTimePassed"/>
     </h4>
     <table class="sudoku-table" style="border-spacing: 0px; background-color: black;">
