--- a/WebSudoku/Client/Shared/MainLayout.razor
+++ b/WebSudoku/Client/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+@inject NavigationManager Nav
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -7,6 +9,13 @@
 
     <main>
         <div class="top-row px-4">
+            @if (Nav.Uri.EndsWith("sudoku/") || Nav.Uri.EndsWith("sudoku"))
+            {
+                <div class="justify-content-start" style="flex: auto;">
+                        <text>Your time: </text>
+                        <TimerDisplay/>
+                </div>
+            }
             <a href="https://github.com/APB97/WebSudoku" target="_blank">Code</a>
         </div>
 
