--- a/WebSudoku/Client/wwwroot/css/app.css
+++ b/WebSudoku/Client/wwwroot/css/app.css
@@ -45,6 +45,10 @@ a, .btn-link {
     .sudoku-input {
         font-size: smaller;
     }
+
+    .display-var {
+        display:none;
+    }
 }
 
 @media only screen and (orientation: landscape) {
@@ -56,6 +60,10 @@ a, .btn-link {
 
     .sudoku-input {
         font-size: medium;
+    }
+
+    .display-var {
+        display: none;
     }
 }
 
@@ -69,6 +77,16 @@ a, .btn-link {
     .sudoku-input {
         font-size: larger;
     }
+
+    .display-var {
+        display: none;
+    }
+}
+
+@media (max-width : 640px) and (orientation : portrait){
+    .display-var {
+        display: block;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -80,6 +98,10 @@ a, .btn-link {
 
     .sudoku-input {
         font-size: x-large;
+    }
+
+    .display-var {
+        display: none;
     }
 }
 
@@ -93,6 +115,10 @@ a, .btn-link {
     .sudoku-input {
         font-size: x-large;
     }
+
+    .display-var {
+        display: none;
+    }
 }
 
 @media (min-width: 1212px) {
@@ -105,6 +131,10 @@ a, .btn-link {
     .sudoku-input {
         font-size: x-large;
     }
+
+    .display-var {
+        display: none;
+    }
 }
 
 @media (min-width: 1500px) {
@@ -116,6 +146,10 @@ a, .btn-link {
 
     .sudoku-input {
         font-size: x-large;
+    }
+
+    .display-var {
+        display: none;
     }
 }
 
